GPencil: Tint modifier "apply" removes the effect #91607

Closed
opened 2021-09-22 17:47:13 +02:00 by Sophie Jantak · 5 comments

System Information
Operating system: Windows-10-10.0.19041-SP0 64 Bits
Graphics card: GeForce GTX 960M/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 456.55

Blender Version
Broken: version: 2.93.4, branch: master, commit date: 2021-08-31 09:23, hash: b7205031ce

Short description of error
When applying the tint modifier, the modifier is removed from the stack but so is its effect on the grease pencil object.

This seems to be solved if I change the tint type to "gradient" and assign an object for the gradient. Once an object is selected, I can apply the modifier as a gradient OR as a uniform colour and it will work.
But if I remove the object and try to apply the modifier as a uniform colour, it doesn't work again.

Exact steps for others to reproduce the error
Open document, or just add a tint modifier
Apply the tint modifier
tintmodifier.blend

Thank you :)

**System Information** Operating system: Windows-10-10.0.19041-SP0 64 Bits Graphics card: GeForce GTX 960M/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 456.55 **Blender Version** Broken: version: 2.93.4, branch: master, commit date: 2021-08-31 09:23, hash: `b7205031ce` **Short description of error** When applying the tint modifier, the modifier is removed from the stack but so is its effect on the grease pencil object. This seems to be solved if I change the tint type to "gradient" and assign an object for the gradient. Once an object is selected, I can apply the modifier as a gradient OR as a uniform colour and it will work. But if I remove the object and try to apply the modifier as a uniform colour, it doesn't work again. **Exact steps for others to reproduce the error** Open document, or just add a tint modifier Apply the tint modifier [tintmodifier.blend](https://archive.blender.org/developer/F10544845/tintmodifier.blend) Thank you :)
Author

Added subscriber: @sophiejay

Added subscriber: @sophiejay

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Antonio Vazquez self-assigned this 2021-09-22 20:01:39 +02:00
Antonio Vazquez changed title from grease pencil tint modifier "apply" removes the effect to GPencil: Tint modifier "apply" removes the effect 2021-09-22 20:01:52 +02:00

This issue was referenced by 25440e2a91

This issue was referenced by 25440e2a91825f3790cb085ddacd2476832b145f

This issue was referenced by 6611f2cb74

This issue was referenced by 6611f2cb740057b7019652524058069d01effa37

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset System
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Asset Browser Project
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#91607
No description provided.