Fix T91607: GPencil Tint modifier "apply" removes the effect