source/blender/gpencil_modifiers/intern/MOD_gpenciltint.c
@@ -260,7 +260,7 @@ static void bakeModifier(Main *UNUSED(bmain),
   bGPdata *gpd = ob->data;
   int oldframe = (int)DEG_get_ctime(depsgraph);
 
-  if (mmd->object == NULL) {
+  if ((mmd->type == GP_TINT_GRADIENT) && (mmd->object == NULL)) {
     return;
   }
 
